[tool.poetry]
name = "apgmx"
version = "0.0.1"
description = "Asyncpg migration system based off of RDanny's migration tool"
authors = ["Noelle <73260931+No767@users.noreply.github.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
asyncpg = "^0.27.0"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"

[tool.isort]
profile = 'black'

[tool.bandit]
skips = ["B311", "B101"]

[tool.poetry.scripts]
apgmx = "apgmx.launcher:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
